Add `comparator_run.sh` script and update README with Quick Start instructions